🎯 fix error in product features
